[package]
name = "fire-scope"
version = "0.1.2"
edition = "2024"
authors = ["Neuron Grid <neuron-grid@neuron-grid.net>"]
license = "MPL-2.0"
readme = "README_eng.md"
repository = "https://github.com/Neuron-Grid/fire-scope"
description = "CLI application to retrieve the latest address allocation file provided by the RIR and output the IPv4/v6 address blocks corresponding to the specified country code in a text file."

[lib]
path = "src/lib.rs"

[[bin]]
name = "fire-scope"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "process"] }
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
chrono = "0.4.40"
futures = "0.3.31"
ipnet = "2.11.0"
rand = "0.9.0"
clap = { version = "4.5.35", features = ["derive"] }