[package]
name = "fire-scope"
version = "0.1.4"
edition = "2024"
authors = ["Neuron Grid <neuron-grid@neuron-grid.net>"]
license = "MPL-2.0"
readme = "README_eng.md"
repository = "https://github.com/Neuron-Grid/fire-scope"
description = "This tool is a CLI application and library that collects and aggregates corresponding IP addresses by specifying country codes and AS numbers, and outputs them to a file in TXT or nftables format.It supports RIR file download and whois AS number query, and also has a function to extract overlapping parts of country codes and AS numbers in CIDR units."
categories = ["command-line-utilities"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "fire-scope"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
chrono = "0.4.40"
futures = "0.3.31"
ipnet = "2.11.0"
rand = "0.9.0"
clap = { version = "4.5.35", features = ["derive"] }