[package]
name = "fire-scope"
version = "0.1.7"
edition = "2024"
authors = ["Neuron Grid <neuron-grid@neuron-grid.net>"]
license = "MPL-2.0"
readme = "README_eng.md"
repository = "https://github.com/Neuron-Grid/fire-scope"
description = "This tool is a CLI application and library that collects and aggregates corresponding IP addresses by specifying country codes and AS numbers, and outputs them to a file in TXT or nftables format.It supports RIR file download and whois AS number query, and also has a function to extract overlapping parts of country codes and AS numbers in CIDR units."
categories = ["command-line-utilities"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "fire-scope"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json", "rustls-tls", "stream"] }
chrono = "0.4.41"
futures = "0.3.31"
ipnet = "2.11.0"
rand = "0.9.2"
clap = { version = "4.5.45", features = ["derive"] }
thiserror = "2.0.16"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
once_cell = "1.21.3"
rayon = "1.11.0"
